[gd_scene load_steps=4 format=3 uid="uid://dx684w2x0u3u6"]

[ext_resource type="Script" uid="uid://bayvsol38bus1" path="res://scripts/hud/computer_screen.gd" id="1_ucd4v"]
[ext_resource type="Theme" uid="uid://cv0nao0t5s5k4" path="res://assets/themes/computer_screen.tres" id="2_gkxp2"]
[ext_resource type="ButtonGroup" uid="uid://1vb3d1v87i2b" path="res://assets/themes/computer_screen_buttons.tres" id="3_hd5qy"]

[node name="ComputerScreen" type="CanvasLayer"]
script = ExtResource("1_ucd4v")

[node name="ButtonTemplate" type="Button" parent="."]
visible = false
offset_top = 54.0
offset_right = 222.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 64
toggle_mode = true
button_group = ExtResource("3_hd5qy")
text = "Level 1"
metadata/level_name = ""

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gkxp2")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.5
offset_right = 322.0
offset_bottom = 27.5
grow_vertical = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "Michealsoft OS 1"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -31.5
offset_bottom = 31.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "X"

[node name="ProgressBar" type="ProgressBar" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -13.5
offset_right = 193.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
step = 1.0
rounded = true
show_percentage = false

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.34

[node name="ButtonContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HSplitContainer/ScrollContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="Panel/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HSplitContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="levelText" type="Label" parent="Panel/VBoxContainer/HSplitContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 128
text = "Select A Level"

[node name="Desc" type="RichTextLabel" parent="Panel/VBoxContainer/HSplitContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
text = "Set the teleporter destination
Then walk on the teleporter to the right"
fit_content = true

[node name="SetButton" type="Button" parent="Panel/VBoxContainer/HSplitContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 32
text = "Set Teleporter Destination!"

[connection signal="pressed" from="Panel/VBoxContainer/Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HSplitContainer/Control/VBoxContainer/SetButton" to="." method="_on_set_button_pressed"]
